<resources>
    <string name="app_name">运动咖</string>

    <string name="mon">一</string>
    <string name="tues">二</string>
    <string name="wednes">三</string>
    <string name="thurs">四</string>
    <string name="fri">五</string>
    <string name="satur">六</string>
    <string name="sun">日</string>
    <string name="week">周</string>

    <string name="home">主页</string>
    <string name="record">记录</string>
    <string name="square">广场</string>
    <string name="me">我</string>
    <string name="login">登录</string>
    <string name="group_name">公会名称</string>
    <string name="group">公会</string>
    <string name="my_group">我的公会</string>
    <string name="find">发现</string>
    <string name="group_introduce">公会介绍</string>
    <string name="add_president_manifesto">添加会长宣言</string>
    <string name="president_manifesto">会长宣言</string>
    <string name="edit_group_tag">编辑公会标签</string>
    <string name="done">完成</string>
    <string name="create">创建</string>
    <string name="create_group">创建公会</string>
    <string name="edit_group">编辑工会</string>
    <string name="send">发送</string>
    <string name="system_notice_nick_name">小Q</string>
    <string name="sign">打卡</string>
    <string name="sign_time">打卡时间</string>
    <string name="sign_history">打卡记录</string>
    <string name="into_group">进入公会</string>
    <string name="recommend_group">推荐公会</string>
    <string name="active_group">公会活跃度排行</string>
    <string name="sort_group">会员贡献值排行</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="leave">请假</string>
    <string name="level">级</string>
    <string name="i_need_leave">我要请假</string>
    <string name="add_sign_content">添加打卡内容</string>
    <string name="sing_content_hint_text">写下今日的感想（可选）</string>
    <string name="sign_leave_hint_text">说明你的请假理由</string>
    <string name="sport">运动</string>
    <string name="diet">饮食</string>
    <string name="today">今日</string>
    <string name="this_week">本周</string>
    <string name="today_diet">今日饮食</string>
    <string name="today_sport">今日运动</string>
    <string name="please_input_sport_name">请输入动作名称</string>
    <string name="load_more">加载更多</string>
    <string name="load_more_ing">加载中。。。</string>
    <string name="load_more_finish">全部数据加载完成</string>
    <string name="common_sport">常用动作</string>
    <string name="all_sport">所有动作</string>
    <string name="action">动作</string>
    <string name="search_result">搜索结果</string>
    <string name="group_sort_title">公会排行</string>
    <string name="input_bear_load">输入负重</string>
    <string name="input_count">输入运动量</string>
    <string name="input_distance">输入距离</string>
    <string name="day">天</string>
    <string name="input_duration">输入时长</string>
    <string name="input_step">输入步数</string>
    <string name="input_params">输入参数</string>
    <string name="kilogram">公斤</string>
    <string name="count">次</string>
    <string name="organize">组</string>
    <string name="kilometer">公里</string>
    <string name="minutes">分钟</string>
    <string name="step">步</string>
    <string name="confirm">确定</string>
    <string name="sign_empty_hint">可以在这里添加每日的饮食和运动记录\n说说每天的运动体验 </string>
    <string name="what_food_eat">吃了什么食物</string>
    <string name="my_ranking">我的排名</string>
    <string name="my_contribution">我的贡献值</string>
    <string name="member_contribution">会员贡献值</string>
    <string name="new_group_message">最新公会消息:</string>
    <string name="group_audit_text">会长还在审核中？试试申请其他公会吧</string>
    <string name="audit_text">审核中...</string>
    <string name="group_empty_text">加入公会！\n和公会成员相互激励，组团减脂更轻松</string>
    <string name="group_portal">公会传送门</string>
    <string name="group_tags">公会标签</string>
    <string name="group_member_count">公会成员：%1$s人</string>
    <string name="continuous_sign_hint">已连续打卡</string>
    <string name="cumulative_sign_hint">累计打卡</string>
    <string name="check_sign_history">查看打卡记录</string>
    <string name="start_sign">开始打卡</string>
    <string name="today_layout_text_hint">• 今天已经打卡的小伙伴有%1$s人。</string>
    <string name="sign_task_success">已达成！</string>
    <string name="sign_task_un_success">未达成！</string>
    <string name="week_layout_sign_count">本周累计打卡次数：%1$s</string>
    <string name="members_clock_in">已打卡会员</string>
    <string name="members_not_clock_in">未打卡会员</string>
    <string name="talent_invite_code">达人邀请码</string>
    <string name="active">活跃度</string>
    <string name="from_photo">从相册选取</string>
    <string name="from_camera">拍摄照片</string>
    <string name="cancel">取消</string>
    <string name="photo">照片</string>
    <string name="camera">拍摄</string>
    <string name="application_group_hint">填写入会申请,让会长认识你!</string>
    <string name="application_group_input_hint">请说明你的减肥目标和决心，会长大人要审核的!</string>
    <string name="hint_input_group_name_or_number">请输入公会名称或公会号</string>

    <string name="current_weight">当前体重</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="send_email">发送邮件</string>
    <string name="customer_service_qq">客服QQ:</string>
    <string name="service_qq_num">2397989944</string>
    <string name="feedback_email">mailto:service@gezhii.com</string>
    <string name="feed_back">意见反馈</string>
    <string name="share_app_text">我加了一个减肥公会，大家一起健身减肥！</string>
    <string name="save_qr_code">保存图片后,扫一扫二维码一起认真减肥</string>
    <string name="suggest_weight">建议目标体重范围: %1$s~%2$s</string>
    <string name="add_sport_empty">没有搜索到相关运动…\n是否添加 %1$s 这个运动？</string>
    <string name="continue_sign_days">一共打卡%1$s次</string>

    <string name="forced_update_hint">您现在使用的版本已经小于最小支持版本，点击确认下载最新版</string>
    <string name="download">下载</string>
    <string name="exit">退出</string>
    <string name="search_or_add_task">搜索或新建任务</string>
    <string name="direct_publication">直接发布</string>
    <string name="publication">发布</string>
    <string name="edit_content">编辑感想</string>
    <string name="long_click_delete_customer_task">长按可以删除某个自定义任务</string>
    <string name="long_click_delete_group_task">长按可以删除某个任务</string>
    <string name="long_click_delete_group_member">长按可以踢出某个会员</string>
    <string name="choose_register_or_login_type">选择以下方式注册/登录</string>
    <string name="qin_account_login">运动咖账号登录</string>
    <string name="mobile_login">手机号登录</string>
    <string name="input_phone_num">输入手机号</string>
    <string name="message_confirm_num">短信验证码</string>
    <string name="send_confirm_num">获取验证码</string>
    <string name="no_confirm_try">没有收到短信，试试</string>
    <string name="voice_confirm_num">语音验证码</string>
    <string name="agree_user_agreement_and_privacy_policy">登录注册，表示你同意用户协议与隐私条例</string>

    <string name="private_chat">私信</string>
    <string name="task">任务</string>
    <string name="group_sign">公会打卡</string>
    <string name="task_classification">任务分类</string>
    <string name="hot_task">热门任务</string>
    <string name="back">返回</string>
    <string name="skip">跳过</string>
    <string name="continue_sign_num">累计打卡次数</string>

    <string name="follow">关注</string>
    <string name="recommend_menu_item_channel">推荐频道</string>
    <string name="recommend_menu_item_vip">推荐达人</string>
    <string name="recommend_menu_item_group">推荐公会</string>
    <string name="next_step">下一步</string>
    <string name="plan_text">任务</string>
    <string name="video_course">视频教程</string>
</resources>
