<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <include layout="@layout/title_view" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="18dp"
        android:background="@drawable/rounded_rectangle_gray_frame_bg_white"
        android:padding="2dp">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/mobile" />

        <EditText
            android:id="@+id/mobile_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="34dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/input_phone_num"
            android:textSize="@dimen/text_size_28" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded_rectangle_gray_frame_bg_white"
        android:padding="2dp">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/lock_confirm_num" />

        <EditText
            android:inputType="number"
            android:id="@+id/confirm_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="34dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/message_confirm_num"
            android:textSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/send_message_confirm_btn"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:background="@drawable/rounded_rectangle_blue"
            android:gravity="center"
            android:text="@string/send_confirm_num"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_28" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded_rectangle_gray_frame_bg_gray97"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_28" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_confirm_try"
            android:textColor="@color/gray_97"
            android:textSize="@dimen/text_size_34" />

        <TextView
            android:id="@+id/voice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_confirm_num"
            android:textColor="@color/pink_ff"
            android:textSize="@dimen/text_size_34" />
    </LinearLayout>
</LinearLayout>