<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <include layout="@layout/title_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="77dp"
        android:text="@string/choose_register_or_login_type"
        android:textColor="@color/gray_97"
        android:textSize="@dimen/text_size_28" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wechat_login_img"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@mipmap/wechat_login" />

        <ImageView
            android:id="@+id/qq_login_img"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:src="@mipmap/qq_login" />

        <ImageView
            android:id="@+id/sina_login_img"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@mipmap/sina_login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="55dp">


        <TextView
            android:id="@+id/qin_account_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/qin_account_login"
            android:textColor="@color/gray_97"
            android:textSize="@dimen/text_size_28" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/qin_account_login_text"
            android:background="@color/gray_97" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/qin_account_login_text"
            android:background="@color/gray_97" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mobile_login"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_rectangle_blue_frame_bg_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mobile_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_34" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/agree_user_agreement_and_privacy_policy"
            android:textColor="@color/gray_97"
            android:textSize="@dimen/text_size_22" />
    </RelativeLayout>
</LinearLayout>