<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:paddingBottom="14dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="14dp"
            android:src="@mipmap/title_back" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_rectangle_white_frame_bg_transparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_day_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/sport_tab_background_selector"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/today"
                android:textColor="@color/select_sport_tab_text_color"
                android:textSize="@dimen/text_size_28" />


            <TextView
                android:id="@+id/select_week_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/sport_tab_background_selector"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/this_week"
                android:textColor="@color/select_sport_tab_text_color"
                android:textSize="@dimen/text_size_28" />


        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/today_scroller_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/today_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="65dp"
                android:background="@color/white"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/body_q" />


                <TextView
                    android:id="@+id/today_layout_text_hint"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:text="@string/today_layout_text_hint"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_28" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/members_clock_in"
                android:textColor="@color/gray_97"
                android:textSize="@dimen/text_size_26" />

            <LinearLayout
                android:id="@+id/members_clock_in_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/members_not_clock_in"
                android:textColor="@color/gray_97"
                android:textSize="@dimen/text_size_26" />

            <LinearLayout
                android:id="@+id/members_not_clock_in_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>


    <ScrollView
        android:visibility="gone"
        android:id="@+id/week_scroller_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/week_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" />

    </ScrollView>


</LinearLayout>